# base

./: .pre-commit-config.yaml  pyproject.toml
models/: model.pkl  scaler.pkl  vectorizer.pkl
notebook/: gud_luck.ipynb
