[project]
name = "base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "mlflow>=3.8.1",
    "nbformat>=5.10.4",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "typer>=0.21.1",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.11.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
